Constant field tests.